# visual-swarm

./: .gitignore  README.md  pyproject.toml
examples/: run_1d_sin.py  run_2d_constrained.py  run_3d_sphere.py
